cambios de pagina

--- a/CC/CrearCuenta.html
+++ b/CC/CrearCuenta.html
@@ -4,21 +4,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Inicia Sesion</title>
+  <title>Crear cuenta</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="StyleCC.css">
 </head>
 
 <body>
-  <div class="container" style="height: 99vh;">
+  <div class="container">
     <figure class="image is-128x128" id="logo">
        <img src="recursos/ESCUDO_JUNIOR.svg.png" alt="escudo">
     </figure>
     <form action="" class="casillas">
 
-      <input class="casillas input is-info" type="text" placeholder="Nombre de usuario" >
-      <input class=" casillas input is-info" type="email" placeholder="Correo electrónico" required>
-      <input class=" casillas input is-info" type="password" placeholder="Contraseña" required>
+      <input class="casillas input ph-custom1 is-danger" type="text" placeholder="Nombre de usuario" >
+      <input class="casillas input ph-custom2 is-info" type="email" placeholder="Correo electrónico" required>
+      <input class="casillas input ph-custom3 is-danger" type="password" placeholder="Contraseña" required>
+      <input class="casillas input ph-custom4 is-info" type="password" placeholder="Confirmar contraseña" required>
     </form>
 
     <a class="button is-info" id="btn-iniciar" href="">Crear cuenta</a>
