cambios a la pagina principal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <!-- Aqui inicia el navbar -->
-    <nav class="navbar is-white is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-danger is-fixed-top" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="https://app.juniorfc.co/">
           <img src="recursos/ESCUDO_JUNIOR.svg.png" width="40" height="60" />
@@ -53,7 +53,7 @@
               <a class="button is-info" href="CC/CrearCuenta.html">
                 <strong>Crear cuenta</strong>
               </a>
-              <a class="button is-danger" id="btn-IniciarSesion" href="login/login.html">
+              <a class="button is-white" id="btn-IniciarSesion" href="login/login.html">
                 Iniciar sesion
               </a>
             </div>
@@ -61,13 +61,13 @@
         </div>
       </div>
     </nav>
-    <br /><br /><br />
-    <!-- Aqui acaba el nav-->
+    <br />
+    <!-- aqui termina el navbar -->
 
     <!-- comienzo del Carousel -->
     <div id="carousel-demo" class="carousel">
       <div class="item item-1">
-        <img src="https://arc-anglerfish-arc2-prod-abccolor.s3.amazonaws.com/public/SRB5EOGTN5B7LGS7Y66LD6NK6I.jpg"
+        <img src="recursos/Screenshot 2023-08-31 193341.png"
           alt="https://www.youtube.com/" />
       </div>
       <div class="item item-2">
@@ -83,7 +83,7 @@
       </div>
     </div>
     <!-- Fin del Carousel -->
-
+    <br>
     <!--Comienzo de las cajas de mensaje-->
     <div class="columns has-text-centered">
       <div class="column">
@@ -109,8 +109,8 @@
     </div>
     <!--Fin cajas de mensajes-->
 
-    <div id="noticias" class="has-background-grey-lighter">
-      <h1 id="a" class="has-text-danger-dark has-text-centered">
+    <div id="noticias" class="has-background-danger">
+      <h1 id="a" class="has-text-white has-text-centered">
         ÚLTIMAS NOTICIAS
       </h1>
     </div>
