--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
     <!-- comienzo del Carousel -->
     <div id="carousel-demo" class="carousel">
       <div class="item item-1">
-        <img src="recursos/Screenshot 2023-08-31 193341.png"
-          alt="https://www.youtube.com/" />
+        <img src="recursos/Screenshot 2023-08-31 193341.png" alt="https://www.youtube.com/" />
       </div>
       <div class="item item-2">
         <img
@@ -183,6 +182,47 @@
     <!--Fin de las tarjetas-->
   </div>
   <br />
+  <!-- Inicia el footer -->
+  <footer class="footer has-background-danger">
+    <div class="container">
+      <div class="footer-row">
+
+        <div class="footer-links">
+          <h4>Daniel Gonzalez</h4>
+          <ul>
+            <li><a href="https://github.com/voidstiles117">Daniel Gonzalez</a></li>
+            <li><a href="https://www.instagram.com/danielgona2002/">Instagram Junior</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links">
+          <h4>Proyectos</h4>
+          <ul>
+            <li><a href="https://github.com/voidstiles117">Daniel Gonzalez</a></li>
+            <li><a href="https://www.instagram.com/juniorclubsa/">Instagram Junior</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links">
+          <h4>Llenar</h4>
+          <ul>
+            <li><a href="#">Llenar</a></li>
+            <li><a href="#">Llenar</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-links">
+          <h4>Llenar</h4>
+          <ul>
+            <li><a href="#">Llenar</a></li>
+            <li><a href="#">Llenar</a></li>
+          </ul>
+        </div>
+        <!-- Termina el footer -->
+
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/js/bulma-carousel.min.js"></script>
   <script>
