estructure mejor el proyecto para que pese menos

--- a/CC/CrearCuenta.html
+++ b/CC/CrearCuenta.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <figure class="image is-128x128" id="logo">
-      <img src="recursos/ESCUDO_JUNIOR.svg.png" alt="escudo">
+      <img src="/recursos/ESCUDO_JUNIOR.svg.png" alt="escudo">
     </figure>
 
     <!-- Empieza el formulario -->
