--- a/login/login.html
+++ b/login/login.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container" style="height: 99vh;">
     <figure class="image is-128x128" id="logo">
-      <img src="recursos/ESCUDO_JUNIOR.svg.png">
+      <img src="/recursos/ESCUDO_JUNIOR.svg.png">
     </figure>
 
     <form action="" id="form">
